--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^5.3.4",
